Added navbar code using bootstrap

--- a/index.html
+++ b/index.html
@@ -13,7 +13,32 @@
 </head>
 
 <body>
-test
+ <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">Sherin Binny</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#About-me">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Contact-me">Contact Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Resume">Resume</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
 <!-- Bootstrap JS and dependencies -->
