Added code for hero section and styled with image

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
  <!-- Navigation bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Sherin Binny</a>
+      <a class="navbar-brand" href="#">Front End Developer</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,16 @@
       </div>
     </div>
   </nav>
+
+  <!-- Hero banner -->
+  <section class="hero-banner text-center">
+    <div class="jumbotron jumbotron-fluid">
+      <h1 class="display-4">Sherin Binny</h1>
+      <p class="lead">As a Frontend Engineer at Nationwide Utilities, I excel in designing and optimizing intricate user interfaces, with a focus on enhancing the user experience. I've suc- cessfully delivered projects such as lead management, energy price tracking, and deal comparison platforms. I collaborate effectively with UX designers to ensure intuitive interfaces.</p>
+    </div>
+  </section>
+
+
 
 
 <!-- Bootstrap JS and dependencies -->
