Added code for about me section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,26 @@
     </div>
   </section>
 
+  <main class="page-wrapper">
+    <!-- About me section -->
+    <section class="page-section" id="About-me">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>About Me</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec velit eu sem ultricies condimentum.
+                Praesent auctor euismod augue, nec bibendum urna bibendum non.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+
+
+  </main>
+
 
 
 
