Added skills section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         </div>
     </section>
 
-    
+    <!-- Border separating different sections -->
+    <div class="pt-5 border-bottom"></div>
 
     <!-- Work portfolio section -->
     <section class="page-section" id="Work">
@@ -130,7 +131,35 @@
         </div>
     </section>
 
-    
+    <!-- Border separating different sections -->
+    <div class="pt-5 border-bottom"></div>
+
+
+    <!-- Skills section -->
+    <section class="page-section" id="Skills">
+        <div class="container">
+            <h2 class="py-5">Skills</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="list-group">
+                        <li class="list-group-item">HTML5</li>
+                        <li class="list-group-item">CSS3</li>
+                        <li class="list-group-item">JavaScript</li>
+                        <li class="list-group-item">Responsive Web Design</li>
+                        <li class="list-group-item">Bootstrap</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-group">
+                        <li class="list-group-item">React.js</li>
+                        <li class="list-group-item">Node.js</li>
+                        <li class="list-group-item">Version Control (Git)</li>
+                        <li class="list-group-item">API Integration</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
   </main>
