--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </nav>
 
   <!-- Hero banner -->
-  <section class="hero-banner text-center">
+  <section class="hero-banner text-center" id="About-me">
     <div class="jumbotron jumbotron-fluid">
         <h1 class="display-4">Sherin Binny</h1>
         <p class="lead">As a Frontend Engineer at Nationwide Utilities, I excel in designing and optimizing intricate user interfaces, with a focus on enhancing the user experience. I've successfully delivered projects such as lead management, energy price tracking, and deal comparison platforms. I collaborate effectively with UX designers to ensure intuitive interfaces.</p>
@@ -49,21 +49,6 @@
   </section>
 
   <main class="page-wrapper">
-
-    <!-- About me section -->
-    <section class="page-section" id="About-me">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <h2 class="py-5">About Me</h2>
-              <p>With five years of diverse frontend development experience, I'm highly motivated and committed to skill expansion. I'm effective at meeting project requirements and dead- lines, fostering productive collaborations with colleagues, and integrating third-party systems. My approach combines creative thinking with rigorous problem-solving.</p>
-            </div>
-          </div>
-        </div>
-    </section>
-
-    <!-- Border separating different sections -->
-    <div class="pt-5 border-bottom"></div>
 
     <!-- Work portfolio section -->
     <section class="page-section" id="Work">
@@ -161,6 +146,31 @@
         </div>
     </section>
 
+    <!-- Border separating different sections -->
+    <div class="pt-5 border-bottom"></div>
+
+    <!-- About/Contact section -->
+    <section class="page-section contact" id="Contact-me">
+        <div class="container">
+            <div class="row">
+                <!-- About me section -->
+                <div class="col-md-12">
+                    <h2 class="py-5">About Me</h2>
+                    <p>With five years of diverse frontend development experience, I'm highly motivated and committed to skill expansion. I'm effective at meeting project requirements and dead- lines, fostering productive collaborations with colleagues, and integrating third-party systems. My approach combines creative thinking with rigorous problem-solving.</p>
+                </div>
+                <!-- Contact me section -->
+                <div class="col-md-6">
+                <h3 class="py-4">Contact</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="tel:12345678">12345678</a></li>
+                        <li><a href="mailto:sherinbinny@gmail.com">sherinbinny@gmail.com</a></li>
+                        <li><a href="https://github.com/sherinbinny">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/in/sherin-binny/">LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
   </main>
 
