Fixed image links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <!-- Project 1 container -->
                     <div class="col-lg-4 col-md-6">
                         <div class="card" role="button">
-                            <img src="/images/portfolio-1.jpg" class="card-img-top" alt="Project 1">
+                            <img src="images/portfolio-1.jpg" class="card-img-top" alt="Project 1">
                             <div class="card-body">
                                 <h5 class="card-title">Surf Report</h5>
                                 <p class="card-text">Surf Report is a web application built using the MERN Stack (MongoDB, Express.js, React.js, Node.js). It provides users with real-time surf conditions and forecasts for various locations. Users can view wave heights, wind speeds, and other relevant information to plan their surfing activities.</p>
@@ -74,7 +74,7 @@
                     <!-- Project 2 container -->
                     <div class="col-lg-4 col-md-6">
                         <div class="card" role="button">
-                            <img src="/images/portfolio-2.jpg" class="card-img-top" alt="Project 2">
+                            <img src="images/portfolio-2.jpg" class="card-img-top" alt="Project 2">
                             <div class="card-body">
                                 <h5 class="card-title">LED Wall</h5>
                                 <p class="card-text">The LED Wall project involved creating a Node.js application to control an LED display wall. This project integrates IoT technology with Node.js to allow users to remotely manage and manipulate the display content.</p>
@@ -84,7 +84,7 @@
                     <!-- Project 3 container -->
                     <div class="col-lg-4 col-md-6">
                         <div class="card" role="button">
-                            <img src="/images/portfolio-3.jpg" class="card-img-top" alt="Project 3">
+                            <img src="images/portfolio-3.jpg" class="card-img-top" alt="Project 3">
                             <div class="card-body">
                                 <h5 class="card-title">Calculator</h5>
                                 <p class="card-text">A simple calculator web application built using React, JavaScript, and CSS. Allows users to perform basic arithmetic operations such as addition, subtraction, multiplication, and division.</p>
@@ -97,7 +97,7 @@
                     <!-- Project 4 container -->
                     <div class="col-lg-4 col-md-6">
                         <div class="card" role="button">
-                            <img src="/images/portfolio-4.jpg" class="card-img-top" alt="Project 4">
+                            <img src="images/portfolio-4.jpg" class="card-img-top" alt="Project 4">
                             <div class="card-body">
                                 <h5 class="card-title">Pastel Puzzles</h5>
                                 <p class="card-text">Pastel Puzzles is a web application developed using the MERN stack. It offers a collection of colorful and engaging puzzles for users to solve, providing entertainment and mental stimulation. The project showcases my skills in full-stack web development, including database management, backend logic implementation, and frontend design.</p>
